[package]
name = "armRustOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[dependencies]
aarch64-cpu = "9.4.0"

[[bin]]
name = "kernel"
path = "src/main.rs"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
