[package]
name = "armRustOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bsp_rpi3 = ["tock-registers"]
debug_prints = []

[dependencies]
debug-symbol-types = { path = "../libraries/debug-symbol-types" }
aarch64-cpu = "9.4.0"
spin = "0.9.0"
linked_list_allocator = { version = "0.10.x", default-features = false, features = ["const_mut_refs"] }

# Optional dependencies
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }
#lazy_static = "1.4.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[bin]]
name = "kernel"
path = "src/main.rs"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
lto = true
